--- a/frontend/neytiri-frontend/src/App.css
+++ b/frontend/neytiri-frontend/src/App.css
@@ -25,18 +25,19 @@
   flex-direction: column;
   align-items: center;
   width: 80%;
-  background: #f6f4eb;
-  border: 3px solid #00adb5;
+  /* background: #f6f4eb; */
+  /* border: 3px solid #00adb5; */
   margin-bottom: 8em;
 }
 .Card {
-  border-radius: 12px;
+  border-radius: 1.5em;
   width: 16%;
   margin: 0.5em;
   height: auto;
   background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0px 6.675869941711426px 25.868999481201172px -1.668969988822937px rgba(73, 141, 255, 0.3);
-  box-shadow: 10px 8px 0px rgb(191 219 254);
+  /* box-shadow: 0px 6.675869941711426px 25.868999481201172px -1.668969988822937px rgba(73, 141, 255, 0.3);
+  box-shadow: 10px 8px 0px rgb(191 219 254); */
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 .Card2 {
   border-radius: 12px;
@@ -67,6 +68,9 @@
   height: 40vmin;
   pointer-events: none;
 }
+.HorizotalLine {
+  height: 2px;
+}
 .NewButton {
   /* display: inline-flex; */
   /* border-radius: 1em; */
@@ -79,7 +83,7 @@
   /* color: white; */
   border: 0px;
   padding: 0px;
-  margin: 0px;
+  margin: 6px;
 
   background: transparent;
 }
@@ -90,7 +94,7 @@
   position: fixed;
   bottom: 4em;
   width: 60%;
-  border-radius: 24px;
+  border-radius: 36px;
   background: #fff;
   box-shadow: 0px 1.600000023841858px 3.5999999046325684px 0px
       rgba(0, 0, 0, 0.26),
@@ -112,6 +116,8 @@
   border: 0px;
   border-radius: 0px;
   outline: 0px;
+  font-family: "Arial", sans-serif;
+  font-size: 19px;
   display: flex;
   flex-direction: column;
   text-decoration: none;
@@ -148,10 +154,18 @@
   font-weight: 700;
 
   text-shadow: 1px;
-  border-radius: 15px;
-  border: 4px solid #00adb5;
+  /* border-radius: 15px; */
+  /* border: 4px solid #00adb5; */
   font-family: "Bricolage Grotesque", sans-serif;
-  background: #f6f4eb;
+  color: #000;
+  text-align: center;
+  /* font-family: "Poppins"; */
+  /* font-size: 23px; */
+  /* font-style: normal; */
+  /* font-weight: 700; */
+  line-height: normal;
+  text-transform: capitalize;
+  /* background: #f6f4eb; */
 
   /* text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.08); */
 }
