--- a/frontend/neytiri-frontend/src/OutfitCard.css
+++ b/frontend/neytiri-frontend/src/OutfitCard.css
@@ -18,6 +18,8 @@
   /* max-height: 100%; */
   width: auto;
   height: auto;
+  margin-top: 1em;
+  border-radius: 1.5em;
   /* display: block; */
   /* margin: 0 auto; */
 }
@@ -43,4 +45,11 @@
   font-family: "Bricolage Grotesque", sans-serif;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  line-height: 26px;
+  color: white;
+}
+.CardWrapper {
+  background: #00d5c4;
+  border-radius: 1.3em;
+  border-top-left-radius: 0px;
 }
