--- a/frontend/neytiri-frontend/src/UserMessage.css
+++ b/frontend/neytiri-frontend/src/UserMessage.css
@@ -19,4 +19,5 @@
   border-top-right-radius: 0px;
   font-weight: 500;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  font-size: 20px;
 }
