--- a/frontend/neytiri-frontend/src/OutfitCard.css
+++ b/frontend/neytiri-frontend/src/OutfitCard.css
@@ -20,12 +20,13 @@
   height: auto;
   margin-top: 1em;
   border-radius: 1.5em;
+  border-top-left-radius: 0px;
   /* display: block; */
   /* margin: 0 auto; */
 }
 .ProductName {
-  font-size: 13px;
-  font-weight: bold;
+  font-size: 18px;
+  font-weight: 550;
   /* font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; */
   text-transform: capitalize;
 }
@@ -34,7 +35,7 @@
   margin: 2px;
   /* font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif; */
   text-transform: capitalize;
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 500;
 }
 .TextsHolder {
