--- a/frontend/neytiri-frontend/src/App.css
+++ b/frontend/neytiri-frontend/src/App.css
@@ -45,6 +45,7 @@
   /* box-shadow: 0px 6.675869941711426px 25.868999481201172px -1.668969988822937px rgba(73, 141, 255, 0.3);
   box-shadow: 10px 8px 0px rgb(191 219 254); */
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  background: #00d5c4;
 }
 .Card2 {
   border-radius: 12px;
@@ -64,7 +65,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: stretch;
   width: 100%;
   border-radius: 10px;
 }
